codigo implementado de dijkstra